--- a/assets/styles/_scrollbar.scss
+++ b/assets/styles/_scrollbar.scss
@@ -15,8 +15,3 @@
   background: #f65e5d;
   border-radius: 10px;
 }
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #f65e5d;
-}
